# metabase-serialization-py

./: .gitignore  .pylintrc  README.md  change_list-EXAMPLE.yml  pyproject.toml
src/: metabase-serialization-cli.py
src/metabase_serialization_py/: __init__.py  change_requests.py  hashing.py  memory_usage.py  yaml.py
src/metabase_serialization_py/metabase_export/: __init__.py
