[project]
name = "metabase-serialization-py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jacob Joseph", email = "jacob@metabase.com"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "fire>=0.6.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
